syntax = "proto3";

package main;

message Token {
	string access_token = 1;
	string token_type = 2;
	string refresh_token = 3;
	int64 expires_at = 4;
	int64 counter = 5;
}

message TokenResponse {
	string my_reply = 1;
}